test/2-error/label-mismatch.err
type error: test/2-error/label-mismatch.ploy:3:14-22: compound field #1 has label `k`; expected label `j`;
argument;
resolved type: (i:Int k:Int)
  main = exit.f(i=0 k=1)
               ~~~~~~~~~
note: test/2-error/label-mismatch.ploy:3:13-22:
argument;
expected type: (i:Int j:Int)
  main = exit.f(i=0 k=1)
              ~~~~~~~~~~
