test/2-error/label-mismatch.ploy
f = fn (i:Int j:Int)%Int i@$;

main = exit.f(i=0 k=1)
